<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">SOME CAMERA</string>
  <string name="launcher_label">SOME CAMERA</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>

  <!-- session -->
  <string name="focus">Focus</string>
  <string name="capture">Capture</string>
  <string name="continue_liveview">Continue</string>

  <!-- property grid -->
  <string name="af_label">AF</string>
  <string name="hide">Hide</string>

  <!-- menu -->
  <string name="menu_feedback">Give Feedback</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_about">About</string>
  <string name="menu_changelog">Changelog</string>
  <string name="menu_help">Help</string>

  <!-- about dialog -->
  <string name="about_dialog_version">Version %1$s</string>
  <string name="about_dialog_copyright">Copyright \u00A9 2025 treeentertainment, original code from Nils Assbeck and MichaeXl Z\u00F6ch</string>
  <string name="about_dialog_message">SOME CAMERA allows you to control your Canon DSLR camera via USB directly form your Android tablet.</string>

  <!-- feedback dialog -->
  <string name="feedback_dialog_title">Help us improve SOME CAMERA!</string>
  <string name="feedback_dialog_message">Want to help improving the app? Then please give us feedback by sending us device information of your camera. Click the "OK" button to open your preferred Email application.</string>

  <!-- no camera dialog -->
  <string name="dialog_no_camera_title">No camera found!</string>
  <string name="dialog_no_camera_message">No compatible Canon or Nikon camera found. Is your camera connected via USB?</string>

  <!-- changelog dialog -->
  <string name="whats_new">What\'s New</string>

  <!-- worker notification -->
  <string name="worker_ticker">SOME CAMERA is running</string>
  <string name="worker_content_title">@string/launcher_label</string>
  <string name="worker_content_text">Is running!</string>

  <!-- gallery -->
  <string name="gallery_reverse_sort_order">Reverse sort order</string>
  <string name="gallery_empty">No pictures found</string>
  <string name="gallery_loading">Loading …</string>
  <string name="error_loading_image">Error loading image</string>
  <string name="gallery_no_camera_connected">No camera connected</string>

  <!-- settings -->
  <string name="activity_app_settings_title">Settings</string>
  <string name="pref_category_liveview_title">Live View</string>
  <string name="pref_captured_picture_duration_label">Show captured picture</string>
  <string name="pref_captured_picture_duration_summary">Seconds a captured picture is displayed during Live View</string>
  <string name="pref_category_picturestream_title">Picture Stream</string>
  <string name="pref_picturestream_num_pictures_label">Number of pictures</string>
  <string name="pref_picturestream_num_pictures_summary">Number of pictures to display in stream. Use lower number if memory is an issue.</string>
  <string name="pref_picturestream_show_filename_label">Filename</string>
  <string name="pref_picturestream_show_filename_summary">Show filename in bottom right corner</string>
  <string name="pref_category_memory_title">Memory constraints</string>
  <string name="pref_memory_picture_size_label">Picture size</string>
  <string name="pref_memory_picture_size_summary">Size of captured pictures in Live View and Gallery</string>

  <!-- acra -->
  <string name="crash_notif_ticker_text">Unexpected error, please send a report…</string>
  <string name="crash_notif_title">SOME CAMERA has crashed…</string>
  <string name="crash_notif_text">Please click here to help fix the issue.</string>
  <string name="crash_dialog_title">SOME CAMERA USB has crashed</string>
  <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click \'OK\'.</string>
  <string name="crash_dialog_comment_prompt">You might add your comments about the problem below or add your email address so we can contact:</string>
  <string name="crash_dialog_ok_toast">Thank you!</string>

  <string name="pref_category_capture_title">캡처 설정</string>
  <string name="pref_capture_button_hold_seconds_label">버튼 길게 누르는 시간</string>
  <string name="pref_capture_button_hold_seconds_summary">이 시간 이상 누르면 정식 캡처, 짧게 누르면 라이브뷰 캡처</string>
  <string name="shutter">Shutter</string>
  <string name="live">Live</string>
  <string name="hist">Hist</string>
  <string name="lens">Lens</string>
  <string name="aperture">Aperture</string>
  <string name="iso_label">ISO</string>

  <string name="wb_label">WB</string>
  <string name="temp_label">Temp</string>
  <string name="style_label">Style</string>
  <string name="meter_label">Meter</string>
  <string name="f_meter_label">F-Meter</string>
  <string name="exp_label">Exp</string>
  <string name="generating_information_please_wait">Generating information. Please wait…</string>
  <string name="close">닫기</string>
  <string name="pref_auto_stop_liveview_on_tab_change_title">탭 변경 시 LiveView 자동 종료</string>
  <string name="pref_auto_stop_liveview_on_tab_change_summary">탭을 바꿀 때 LiveView를 자동으로 끕니다.</string>
  <string name="pref_single_click_mode_title">한 번 클릭 시 캡처 모드</string>
  <string name="pref_long_press_mode_title">길게 누름 시 캡처 모드 (2초 이상)</string>
  <string name="pref_double_click_mode_title">더블 클릭 시 캡처 모드</string>
</resources>