<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:title="@string/pref_category_liveview_title">

    <ListPreference
        android:key="liveview.captured_picture_duration"
        android:title="@string/pref_captured_picture_duration_label"
        android:summary="@string/pref_captured_picture_duration_summary"
        android:entries="@array/captured_picture_duration_labels"
        android:entryValues="@array/captured_picture_duration_entries"
        android:defaultValue="-1" />
  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref_category_picturestream_title">

    <ListPreference
        android:key="picturestream.num_pictures"
        android:title="@string/pref_picturestream_num_pictures_label"
        android:summary="@string/pref_picturestream_num_pictures_summary"
        android:entries="@array/picturestream_num_pictures_labels"
        android:entryValues="@array/picturestream_num_pictures_entries"
        android:defaultValue="6" />

    <!-- CheckBoxPreference 대신 SwitchPreferenceCompat 사용 -->
    <SwitchPreferenceCompat
        android:key="picturestream.show_filename"
        android:title="@string/pref_picturestream_show_filename_label"
        android:summary="@string/pref_picturestream_show_filename_summary"
        android:defaultValue="true" />
  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref_category_memory_title">

    <ListPreference
        android:key="memory.picture_sample_size"
        android:title="@string/pref_memory_picture_size_label"
        android:summary="@string/pref_memory_picture_size_summary"
        android:entries="@array/memory_picture_size_labels"
        android:entryValues="@array/memory_picture_size_entries"
        android:defaultValue="2" />
  </PreferenceCategory>
  <!-- 클릭 방식 선택 -->
  <ListPreference
      android:key="capture_trigger_mode"
      android:title="캡처 트리거 방식"
      android:defaultValue="single_click"
      android:entries="@array/capture_trigger_entries"
      android:entryValues="@array/capture_trigger_values"/>

  <!-- 각 트리거별 캡처 모드 선택 -->
  <ListPreference
      android:key="single_click_mode"
      android:title="한 번 클릭 시 캡처 모드"
      android:defaultValue="liveview"
      android:entries="@array/capture_mode_entries"
      android:entryValues="@array/capture_mode_values"/>

  <ListPreference
      android:key="long_press_mode"
      android:title="길게 누름 시 캡처 모드"
      android:defaultValue="high_quality"
      android:entries="@array/capture_mode_entries"
      android:entryValues="@array/capture_mode_values"/>

  <ListPreference
      android:key="double_click_mode"
      android:title="더블 클릭 시 캡처 모드"
      android:defaultValue="high_quality"
      android:entries="@array/capture_mode_entries"
      android:entryValues="@array/capture_mode_values"/>


</PreferenceScreen>
